--- a/docs/openAPI/openapi/payments.yaml
+++ b/docs/openAPI/openapi/payments.yaml
@@ -9,7 +9,9 @@ paths:
   /events/{eventId}/ticket-types:
     get:
       summary: Get all ticket types for an event
-      description: Retrieve all available ticket types for a specific event
+      description: |
+        Retrieve all available ticket types for a specific event.
+        Authentication is optional. If not authenticated, only ticket types for published events can be accessed.
       parameters:
         - name: eventId
           in: path
@@ -50,12 +52,26 @@ paths:
                   soldQuantity: 20
                   totalQuantity: 20
                   isSoldOut: true
-        '400':
-          description: Bad Request
+        '403':
+          description: Forbidden - Unauthenticated user cannot access ticket types for non-published event
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+              example:
+                statusCode: 403
+                message: Current user cannot access this event ticket types
+                error: Forbidden
+        '404':
+          description: Not Found - Event does not exist
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                statusCode: 404
+                message: Event with id evt_550e8400-e29b-41d4-a716-446655440000 not found
+                error: Not Found
       tags:
         - Event
 
@@ -212,7 +228,7 @@ paths:
       summary: Get a specific ticket type by ID
       description: |
         Retrieve detailed information about a specific ticket type.
-        Authentication is optional. If authenticated and the event is not published, access will be denied.
+        Authentication is optional. If not authenticated and the event is not published, access will be denied.
       servers:
         - url: http://localhost:3000
           description: Local server
@@ -246,14 +262,14 @@ paths:
                 totalQuantity: 100
                 isSoldOut: false
         '403':
-          description: Forbidden - Authenticated user cannot access ticket type for non-published event
+          description: Forbidden - Current user cannot access ticket type for non-published event
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
               example:
                 statusCode: 403
-                message: User ID in token cannot access this ticket type
+                message: Current user cannot access this event ticket types
                 error: Forbidden
         '404':
           description: Not Found - Ticket type or event does not exist
