--- a/docs/openAPI/openapi/payments.yaml
+++ b/docs/openAPI/openapi/payments.yaml
@@ -5,6 +5,26 @@ info:
   description: API for managing event ticket types, pricing, and availability
 paths:
 
+  /health:
+    get:
+      summary: Health check endpoint
+      description: Returns the health status of the service
+      responses:
+        '200':
+          description: Service is healthy
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: ok
+              example:
+                status: ok
+      tags:
+        - Health
+
   # Event Ticket Types endpoints (per-event)
   /events/{eventId}/ticket-types:
     get:
