--- a/services/frontend/package.json
+++ b/services/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.0.0",
   "private": true,
+  "license": "GPL-3.0",
   "type": "module",
   "engines": {
     "node": ">=22.20.0"
