--- a/services/media/package.json
+++ b/services/media/package.json
@@ -1,6 +1,7 @@
 {
   "name": "media-service",
   "version": "1.0.0",
+  "license": "GPL-3.0",
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
