--- a/infrastructure/seed/Dockerfile
+++ b/infrastructure/seed/Dockerfile
@@ -1,12 +1,12 @@
 FROM node:25-alpine3.22
+WORKDIR /app
 
 RUN apk add --no-cache docker-cli
 
-WORKDIR /app
-
-COPY package.json ./
+COPY ./infrastructure/seed/package.json ./
 RUN npm install
 
-COPY . .
+COPY ./infrastructure/seed/tsconfig.json ./
+COPY ./infrastructure/seed/src ./src
 
-CMD ["npm", "run", "seed"]
+CMD ["npm", "run", "seed:generate"]
